# python-project-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/adr/: 0000-template.md  0001-use-adrs.md
src/package_name/: __init__.py  example.py
tests/integration/: test_placeholder.py
tests/unit/: test_example.py
