[project]
name = "package-name"  # RENAME: your distribution name (PyPI)
version = "0.1.0"
description = "One-line description. RENAME placeholders before first commit."
readme = "README.md"
license = "MIT"
authors = [{ name = "Yasir Jafri", email = "yasir.jafri007@gmail.com" }]
requires-python = ">=3.11"
# Runtime dependencies go here. Keep empty until you actually need one.
dependencies = []

[project.urls]
Homepage = "https://github.com/Yasir323/package-name"
Changelog = "https://github.com/Yasir323/package-name/blob/main/CHANGELOG.md"

# Dev-only tools (PEP 735). Installed by `uv sync` automatically.
[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# RENAME: must match the directory under src/
packages = ["src/package_name"]

# ---------------------------------------------------------------- ruff ----
[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle · F pyflakes · I isort · N naming · UP pyupgrade
# B bugbear · SIM simplify · RUF ruff-specific
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and magic values freely.
"tests/**" = ["S101"]

# ---------------------------------------------------------------- mypy ----
[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]  # type-check source only; tests run via pytest
# Strict already implies the important flags; these improve messages.
pretty = true
show_error_codes = true

# -------------------------------------------------------------- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests/unit"]  # integration runs explicitly: make itest
asyncio_mode = "auto"       # async def tests need no decorator
addopts = "-q --strict-markers"
markers = [
    "integration: requires real infrastructure (testcontainers etc.)",
]

# ------------------------------------------------------------ coverage ----
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
